--- a/taobao/www/index.html
+++ b/taobao/www/index.html
@@ -6,6 +6,8 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/comp.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -28,10 +30,10 @@
       The nav bar that will be updated as we navigate between views.
     -->
     
-    <ion-nav-bar class="bar-stable">
+    <!-- <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
 
     <!--
       The views will be rendered in the <ion-nav-view> directive below
