--- a/myIonic/www/ioJS.html
+++ b/myIonic/www/ioJS.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+  <link href="css/ionic.app.css" rel="stylesheet">
+  -->
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <!-- ionic/angularjs js -->
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+  <!-- cordova script (this will be a 404 during development) -->
+  <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
+  <!-- your app's js -->
+  <script src="js/app.js"></script>
+</head>
 
-  <!-- ion-header-bar -->
-  
-  <body ng-app="starter">
-   <ion-header-bar align-title="left" class="bar-positive">
+<!-- ion-header-bar -->
+
+<body ng-app="starter">
+
+<ion-header-bar align-title="left" class="bar-positive">
   <div class="buttons">
     <button class="button" ng-click="doSomething()">左侧按钮</button>
   </div>
@@ -34,9 +35,19 @@
     <button class="button">右侧按钮</button>
   </div>
 </ion-header-bar>
-<ion-content>
-  一些内容!
+
+
+<ion-content ng-controller="MyController">
+  <ion-refresher
+    pulling-text="下拉刷新..."
+    on-refresh="doRefresh()">
+  </ion-refresher>
+  <ion-list>
+    <ion-item ng-repeat="item in items"></ion-item>
+  </ion-list>
 </ion-content>
+
+
 <ion-footer-bar align-title="left" class="bar-assertive">
   <div class="buttons">
     <button class="button">左侧按钮</button>
@@ -48,5 +59,5 @@
 </ion-footer-bar>
 
 
-  </body>
+</body>
 </html>
