--- a/myIonic/www/ioCSS.html
+++ b/myIonic/www/ioCSS.html
@@ -51,6 +51,57 @@
 
 <!-- 内容一 -->
 <ion-scroll direction="y" style="height:1000px;">
+<i class="icon ion-star"></i>
+
+<!-- Responsive Grid -->
+<div class="row responsive-sm"><div class="col">.col</div><div class="col">.col</div><div class="col">.col</div><div class="col">.col</div></div>
+
+<!-- Grid: Vertically Align Columns -->
+<div class="row">
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">1<br>2<br>3<br>4</div>
+</div>
+
+<div class="row">
+	<div class="col col-top">.col</div>
+	<div class="col col-center">.col</div>
+	<div class="col col-bottom">.col</div>
+	<div class="col">1<br>2<br>3<br>4</div>
+</div>
+<div class="row row-top">
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">1<br>2<br>3<br>4</div>
+</div>
+<div class="row row-center">
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">1<br>2<br>3<br>4</div>
+</div>
+<div class="row row-bottom">
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">.col</div>
+	<div class="col">1<br>2<br>3<br>4</div>
+</div>
+
+<!-- Grid: Offset Columns -->
+<div class="row">
+	<div class="col col-33 col-offset-33">.col1</div>
+	<div class="col">.col2</div>
+</div>
+<div class="row">
+	<div class="col col-33">.col3</div>
+	<div class="col col-33 col-offset-33">.col4</div>
+</div>
+<div class="row">
+	<div class="col col-33 col-offset-67">.col5</div>
+</div>
+
 <!-- Grid: Explicit Column Sizes -->
 <div class="row"><div class="col col-50">.col.col-50</div><div class="col">.col</div><div class="col">.col</div></div><div class="row"><div class="col col-75">.col.col-75</div><div class="col">.col</div></div><div class="row"><div class="col">.col</div><div class="col col-75">.col.col-75</div></div><div class="row"><div class="col">.col</div><div class="col">.col</div></div>
 <!-- Grid -->
