--- a/myIonic/www/tutorial/ion-checkbox/app.html
+++ b/myIonic/www/tutorial/ion-checkbox/app.html
@@ -12,55 +12,50 @@
   <script src="../../js/mock.js"></script>
   <script src="../../js/mockdata.js"></script>
 </head>
-
-<body ng-controller="MyCtrl">
+<body ng-controller="MainCtrl">
 
 <ion-header-bar class="bar-positive">
-  <div class="buttons">
-    <button class="button button-icon icon ion-ios-minus-outline"
-            ng-click="data.showDelete = !data.showDelete; data.showReorder = false"></button>
-    <button class="button" ng-click="showDeleteButtons()">删除</button>
-  </div>
-  <h1 class="title">Ionic Delete/Option Buttons</h1>
-  <div class="buttons">
-    <button class="button" ng-click="data.showDelete = false; data.showReorder = !data.showReorder">
-      Reorder
-    </button>
-  </div>
+  <h1 class="title">Checkboxes</h1>
 </ion-header-bar>
 
 <ion-content>
 
-  <!-- The list directive is great, but be sure to also checkout the collection repeat directive when scrolling through large lists -->
+  <div class="list">
 
-  <ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
+    <ion-checkbox ng-repeat="item in devList"
+                  ng-model="item.checked"
+                  ng-checked="item.checked">
+      {{ item.text }}
+    </ion-checkbox>
 
-    <ion-item ng-repeat="item in items"
-              item="item"
-              href="#/item/{{item.id}}" class="item-remove-animate">
-      Item {{ item.id }}
-      <ion-delete-button class="ion-minus-circled"
-                         ng-click="onItemDelete(item)">
-      </ion-delete-button>
-      <ion-option-button class="button-assertive"  ng-click="edit(item)">
-        Edit
-      </ion-option-button>
-      <ion-option-button class="button-calm" ng-click="share(item)">
-        Share
-      </ion-option-button>
-      <ion-option-button class="button-dark" ng-click="top(item,$fromIndex)">
-        置顶
-      </ion-option-button>
+    <div class="item">
+      <pre ng-bind="devList | json"></pre>
+    </div>
 
-      <ion-reorder-button class="ion-navicon" on-reorder="moveItem(item, $fromIndex, $toIndex)">
+    <div class="item item-divider">
+      Notifications
+    </div>
 
-      </ion-reorder-button>
-    </ion-item>
+    <ion-checkbox ng-model="pushNotification.checked"
+                  ng-change="pushNotificationChange()">
+      Push Notifications
+    </ion-checkbox>
 
-  </ion-list>
-  <ion-toggle ng-model="shouldShowDelete">
-    显示删除?
-  </ion-toggle>
+    <div class="item">
+      <pre ng-bind="pushNotification | json"></pre>
+    </div>
+
+    <ion-checkbox ng-model="emailNotification"
+                  ng-true-value="'Subscribed'"
+                  ng-false-value="'Unubscribed'">
+      Newsletter
+    </ion-checkbox>
+    <div class="item">
+      <pre ng-bind="emailNotification | json"></pre>
+    </div>
+
+  </div>
+
 </ion-content>
 
 </body>
