--- a/myIonic/www/tutorial/ionicPopup/app.html
+++ b/myIonic/www/tutorial/ionicPopup/app.html
@@ -13,59 +13,30 @@
   <script src="../../js/mockdata.js"></script>
 </head>
 
+<body class="padding" ng-controller="PopupCtrl">
 
-<body ng-controller="MainCtrl">
+<button class="button button-dark" ng-click="showPopup()">
+  show
+</button>
+<button class="button button-primary" ng-click="showConfirm()">
+  Confirm
+</button>
+<button class="button button-positive" ng-click="showAlert()">
+  Alert
+</button>
+<br>
+<div ng-controller="LoadingCtrl">
+  <button class="button button-positive" ng-click="show()">
+  Loading...
+  </button>
+  <button class="button button-positive" ng-click="hide()">
+    Hide Loading...
+  </button>
+</div>
 
-<ion-header-bar class="bar-positive">
-  <h1 class="title">Toggles</h1>
-</ion-header-bar>
 
-<ion-content>
-
-  <div class="list">
-
-    <div class="item item-divider">
-      Settings
-    </div>
-
-    <ion-toggle toggle-class="toggle-calm"
-      ng-repeat="item in settingsList"
-                ng-model="item.checked"
-                ng-checked="item.checked">
-      {{ item.text }}
-    </ion-toggle>
-
-    <div class="item">
-      <pre ng-bind="settingsList | json"></pre>
-    </div>
-
-    <div class="item item-divider">
-      Notifications
-    </div>
-
-    <ion-toggle ng-model="pushNotification.checked"
-                ng-change="pushNotificationChange()">
-      Push Notifications
-    </ion-toggle>
-
-    <div class="item">
-      <pre ng-bind="pushNotification | json"></pre>
-    </div>
-
-    <ion-toggle toggle-class="toggle-dark"
-                ng-model="emailNotification"
-                ng-true-value="'Subscribed'"
-                ng-false-value="'Unubscribed'">
-      Newsletter
-    </ion-toggle>
-
-    <div class="item">
-      <pre ng-bind="emailNotification | json"></pre>
-    </div>
-
-  </div>
-
-</ion-content>
-
+<script id="popup-template.html" type="text/ng-template">
+  <input ng-model="data.wifi" type="text" placeholder="Password">
+</script>
 </body>
 </html>
