--- a/myIonic/www/tutorial/ion-nav-view/app.html
+++ b/myIonic/www/tutorial/ion-nav-view/app.html
@@ -6,6 +6,7 @@
 
   <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
   <script src="http://code.ionicframework.com/1.0.0-beta.1/js/ionic.bundle.min.js"></script>
+  <link rel="stylesheet" href="iconfont.css">
   <script src="app.js"></script>
   <script src="../../js/mock.js"></script>
   <script src="../../js/mockdata.js"></script>
@@ -40,6 +41,9 @@
       <ion-nav-view name="contact-tab"></ion-nav-view>
     </ion-tab>
 
+    <ion-tab title="处女座"  ui-sref="tabs.contact" icon="iconfont icon-chunvzuo" style="border: solid 1px #F00;"  >
+      <ion-nav-view name="contact-tab"></ion-nav-view>
+    </ion-tab>
 
   </ion-tabs>
 </script>
