--- a/myIonic/www/ioCSS.html
+++ b/myIonic/www/ioCSS.html
@@ -50,21 +50,21 @@
 
 
 <!-- 内容一 -->
-<ion-scroll direction="y" style="height:1000px;">
+<ion-content scroll="true">
 <i class="icon ion-star"></i>
 
 <!-- Responsive Grid -->
-<div class="row responsive-sm"><div class="col">.col</div><div class="col">.col</div><div class="col">.col</div><div class="col">.col</div></div>
+<div class="row responsive-sm" style="border: solid 1px #F00;"><div class="col">.col</div><div class="col">.col</div><div class="col">.col</div><div class="col">.col</div></div>
 
 <!-- Grid: Vertically Align Columns -->
-<div class="row">
+<div class="row" style="border: solid 1px #20F620;">
 	<div class="col">.col</div>
 	<div class="col">.col</div>
 	<div class="col">.col</div>
 	<div class="col">1<br>2<br>3<br>4</div>
 </div>
 
-<div class="row">
+<div class="row" style="border: solid 1px #56540F;">
 	<div class="col col-top">.col</div>
 	<div class="col col-center">.col</div>
 	<div class="col col-bottom">.col</div>
@@ -479,7 +479,7 @@
 
   <div style="height:200px;border:solid 1px #F00;"></div>
 
-</ion-scroll>
+</ion-content>
 
 
 <!-- <ion-scroll zooming="true" direction="xy" style="width: 500px; height: 500px">
