--- a/myIonic/www/myDemo/mt4/app.html
+++ b/myIonic/www/myDemo/mt4/app.html
@@ -4,19 +4,22 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title>Inline Tabs</title>
 
-  <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
-  <script src="http://code.ionicframework.com/1.0.0-beta.1/js/ionic.bundle.min.js"></script>
+ <!-- <link href="//cdn.bootcss.com/ionic/1.3.1/css/ionic.min.css" rel="stylesheet">
+  <script src="//cdn.bootcss.com/ionic/1.3.1/js/ionic.bundle.min.js"></script>-->
+
+  <link href="../../lib/ionic/css/ionic.css" rel="stylesheet">
+  <script src="../../lib/ionic/js/ionic.bundle.js"></script>
+
   <link rel="stylesheet" href="css/iconfont.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="app.js"></script>
   <script src="../../js/mock.js"></script>
   <script src="../../js/mockdata.js"></script>
 </head>
 <body>
-
-
-
+<!--
 <ion-nav-bar animation="nav-title-slide-ios7"
-             type="bar-positive"
+             type="bar-dark"
              back-button-type="button-icon"
              back-button-icon="ion-arrow-left-c">
 
@@ -25,46 +28,12 @@
   </ion-nav-back-button>
 
 </ion-nav-bar>
+-->
 
-<ion-nav-view animation="slide-left-right"></ion-nav-view>
+<ion-nav-view animation="slide-left-right">
 
+</ion-nav-view>
 
-<script id="tabs.html" type="text/ng-template">
-  <ion-tabs tabs-style="tabs-icon-top" tabs-type="tabs-positive">
-
-    <ion-tab title="Home" icon="ion-home" href="#/tab/home">
-      <ion-nav-view name="home-tab"></ion-nav-view>
-    </ion-tab>
-
-    <ion-tab title="About" icon="ion-ios7-information" href="#/tab/about">
-      <ion-nav-view name="about-tab"></ion-nav-view>
-    </ion-tab>
-
-    <ion-tab title="Contact" icon="ion-ios7-world"  ui-sref="tabs.contact">
-      <ion-nav-view name="contact-tab"></ion-nav-view>
-    </ion-tab>
-
-    <ion-tab title="处女座"  ui-sref="tabs.contact" icon="iconfont icon-chunvzuo" style="border: solid 1px #F00;"  >
-      <ion-nav-view name="contact-tab"></ion-nav-view>
-    </ion-tab>
-
-  </ion-tabs>
-</script>
-
-<script id="home.html" type="text/ng-template">
-  <ion-view title="'Home'">
-    <ion-content has-header="true" padding="true">
-      <p>Example of Ionic tabs. Navigate to each tab, and
-        navigate to child views of each tab and notice how
-        each tab has its own navigation history.</p>
-      <p>
-        <a class="button icon icon-right ion-chevron-right" href="#/tab/facts">Scientific Facts</a>
-      </p>
-
-
-    </ion-content>
-  </ion-view>
-</script>
 
 <script id="facts.html" type="text/ng-template">
   <ion-view title="'Facts'">
