--- a/myIonic/www/myDemo/beer/app.html
+++ b/myIonic/www/myDemo/beer/app.html
@@ -17,18 +17,15 @@
   <script src="../../js/mockdata.js"></script>
 </head>
 <body>
-<!--
-<ion-nav-bar animation="nav-title-slide-ios7"
-             type="bar-dark"
-             back-button-type="button-icon"
-             back-button-icon="ion-arrow-left-c">
+ 
+<ion-nav-bar class="bar-assertive" align-title="center">
 
   <ion-nav-back-button class="button-clear">
     <i class="ion-arrow-left-c"></i> 后退
   </ion-nav-back-button>
 
 </ion-nav-bar>
--->
+ 
 
 <ion-nav-view animation="slide-left-right">
 
