--- a/myIonic/www/myDemo/ion-nav-view/app.html
+++ b/myIonic/www/myDemo/ion-nav-view/app.html
@@ -3,30 +3,27 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title>Inline Tabs</title>
-
   <!--
     <link href="http://code.ionicframework.com/1.0.0-beta.1/css/ionic.min.css" rel="stylesheet">
     <script src="http://code.ionicframework.com/1.0.0-beta.1/js/ionic.bundle.min.js"></script>
   -->
-
   <link href="../../lib/ionic/css/ionic.css" rel="stylesheet">
   <script src="../../lib/ionic/js/ionic.bundle.js"></script>
-
-
   <link rel="stylesheet" href="css/iconfont.css">
   <script src="app.js"></script>
   <script src="../../js/mock.js"></script>
   <script src="../../js/mockdata.js"></script>
 </head>
 <body>
-
- <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+ 
+<ion-nav-bar class="bar-stable nav-title-slide-ios7" >
+ 
   <ion-nav-back-button class="button-clear">
     <i class="ion-arrow-left-c"></i> 后退
   </ion-nav-back-button>
 </ion-nav-bar> 
 
-<ion-nav-view animation="slide-left-right" style="border: solid 1px #F00;">
+<ion-nav-view animation="slide-left-right" style="border: solid 2px #F00;">
 
 </ion-nav-view>
 
@@ -35,15 +32,15 @@
   <ion-tabs class="tabs-stable tabs-icon-top">
 
     <ion-tab title="Home" icon="ion-home" href="#/tab/home">
-      <ion-nav-view name="home-tab" style="border: solid 1px #0F0;"  ></ion-nav-view>
+      <ion-nav-view name="home-tab" style="border: solid 2px #0F0;"  ></ion-nav-view>
     </ion-tab>
 
     <ion-tab title="About" icon="ion-ios-information" href="#/tab/about">
-      <ion-nav-view name="about-tab" style="border: solid 1px #00F;" ></ion-nav-view>
+      <ion-nav-view name="about-tab" style="border: solid 2px #00F;" ></ion-nav-view>
     </ion-tab>
 
     <ion-tab title="Contact" icon="ion-ios-world" ui-sref="tabs.contact">
-      <ion-nav-view name="contact-tab" style="border: solid 1px #0FF;" ></ion-nav-view>
+      <ion-nav-view name="contact-tab" style="border: solid 2px #0FF;" ></ion-nav-view>
     </ion-tab>
 
   </ion-tabs>
@@ -66,6 +63,10 @@
 
 <script id="facts.html" type="text/ng-template">
   <ion-view title="'Facts'">
+    <ion-nav-buttons side="right">
+      <button>facts btn</button>
+    </ion-nav-buttons>
+
     <ion-content has-header="true" padding="true" >
 
       <p>A cockroach will live nine days without it's head, before it starves to death.</p>
@@ -99,7 +100,9 @@
 
  <!--<ion-nav-view style="border: solid 1px #ffff00;">-->
     <ion-view title="Facts 3"  ng-controller="Fact3Ctrl" >
-
+      <ion-nav-buttons side="right">
+        <button>facts3 btn</button>
+      </ion-nav-buttons>
     <!--  <ion-nav-buttons side="left">
         <button class="button back-button buttons button-clear header-item" ng-click="$ionicGoBack()">
           <i class="ion-arrow-left-c"></i> 后退
