--- a/myIonic/www/myDemo/ion-nav/app.html
+++ b/myIonic/www/myDemo/ion-nav/app.html
@@ -15,15 +15,19 @@
 </head>
 <body>
 
-<ion-nav-bar class="bar-stable nav-title-slide-ios7" >
+ <ion-nav-bar class="bar-stable nav-title-slide-ios7" >
   <ion-nav-back-button class="button-clear" >
     <i class="ion-arrow-left-c"></i> 后退
   </ion-nav-back-button>
 </ion-nav-bar>
 
-<ion-nav-view animation="slide-left-right" style="border: solid 2px #f00;" >
-
+<ion-nav-view   animation="slide-left-right" style="border: solid 2px #f00; " >
 </ion-nav-view>
+
+ <!--<ion-nav-view name="rootView2" animation="slide-left-right" style="border: solid 2px #00F;height:50%;" >
+
+ </ion-nav-view>-->
+
 
 </body>
 </html>
