--- a/myIonic/www/myDemo/ion-nav/app.html
+++ b/myIonic/www/myDemo/ion-nav/app.html
@@ -10,6 +10,7 @@
   <script src="js/app.js"></script>
   <script src="js/config.router.js"></script>
   <script src="js/controller.js"></script>
+  <script src="js/directive.js"></script>
   <script src="../../js/mock.js"></script>
   <script src="../../js/mockdata.js"></script>
 </head>
