--- a/myIonic/www/myDemo/mt4/app.html
+++ b/myIonic/www/myDemo/mt4/app.html
@@ -1,20 +1,16 @@
-<html ng-app="ionicApp">
+<html ng-app="appMT4">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title>Inline Tabs</title>
-
- <!-- <link href="//cdn.bootcss.com/ionic/1.3.1/css/ionic.min.css" rel="stylesheet">
-  <script src="//cdn.bootcss.com/ionic/1.3.1/js/ionic.bundle.min.js"></script>-->
+  <title>MT4 Web</title>
 
   <link href="../../lib/ionic/css/ionic.css" rel="stylesheet">
   <script src="../../lib/ionic/js/ionic.bundle.js"></script>
 
   <link rel="stylesheet" href="css/iconfont.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
   <script src="../../js/mock.js"></script>
-  <script src="../../js/mockdata.js"></script>
 </head>
 <body>
 <!--
