--- a/myIonic/www/ioCSS.html
+++ b/myIonic/www/ioCSS.html
@@ -40,17 +40,28 @@
 <div class="bar bar-subheader"><h2 class="title">Sub Header</h2></div> -->
 
 <!-- Header Inputs -->
-<div class="bar bar-header item-input-inset">
+<!--<div class="bar bar-header item-input-inset">
   <label class="item-input-wrapper">
     <i class="icon ion-ios-search placeholder-icon"></i>
     <input type="search" placeholder="Search">
   </label>
   <button class="button button-dark">Cancel</button>
-</div>
+</div>-->
 
 
 <!-- 内容一 -->
-<ion-content scroll="true">
+<ion-content scroll="true" >
+  <div style="width:300px;border: solid 1px #F00;">12</div>
+
+  <label class="item item-input">
+    <span class="input-label">Telephone</span>
+    <input type="tel">
+  </label>
+  <label class="item item-input">
+    <span class="input-label">Date</span>
+    <input type="date">
+  </label>
+
 <i class="icon ion-star"></i>
 
 <!-- Responsive Grid -->
