--- a/myIonic/www/ioCSS.html
+++ b/myIonic/www/ioCSS.html
@@ -6,6 +6,12 @@
   <title></title>
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link rel="stylesheet" href="http://www.ionic.wang/statics/index/css/common.css">
+  <link rel="stylesheet" href="http://www.ionic.wang/statics/index/css/style.css">
+  <link rel="stylesheet" href="http://www.ionic.wang/statics/index/css/site.css">
+  <link rel="stylesheet" href="http://www.ionic.wang/statics/index/css/bootstrap.css">
+  <link rel="stylesheet" href="http://www.ionic.wang/statics/index/css/doc.css">
+
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -51,6 +57,57 @@
 
 <!-- 内容一 -->
 <ion-content scroll="true" >
+  <div class="list">
+
+    <a class="item item-thumbnail-left" href="#">
+      <img src="img/ionic.png">
+      <h2>Pretty Hate Machine</h2>
+      <p>Nine Inch Nails</p>
+    </a>
+    <a class="item item-thumbnail-left" href="#">
+      <img src="img/ionic.png">
+      <h2>Pretty Hate Machine</h2>
+      <p>Nine Inch Nails</p>
+    </a>
+    <a class="item item-thumbnail-left" href="#">
+      <img src="img/ionic.png">
+      <h2>Pretty Hate Machine</h2>
+      <p>Nine Inch Nails</p>
+    </a>
+    <a class="item item-thumbnail-left" href="#">
+      <img src="img/ionic.png">
+      <h2>Pretty Hate Machine</h2>
+      <p>Nine Inch Nails</p>
+    </a>
+
+
+
+  </div>
+  <div class="list card">
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-home"></i>
+      Enter home address
+    </a>
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-ios-telephone"></i>
+      Enter phone number
+    </a>
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-wifi"></i>
+      Enter wireless password
+    </a>
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-card"></i>
+      Enter card information
+    </a>
+
+  </div>
+
+
   <div style="width:300px;border: solid 1px #F00;">12</div>
 
   <label class="item item-input">
